--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.8.1",
     "@radix-ui/react-label": "^2.1.2",
+    "@sanity/client": "^6.28.3",
+    "axios": "^1.8.1",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.6",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.477.0",
     "next": "15.1.5",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss-animate": "^1.0.7"
