--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
     "@sanity/client": "^6.28.3",
+    "@strapi/client": "^1.4.0",
     "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
